--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,3 @@
-# Release workflow for context7-skill
-# Packages only skill-relevant files, excludes dev/CI files
-
 name: Release
 
 on:
@@ -32,23 +29,25 @@ jobs:
       - name: Create skill package
         run: |
           mkdir -p dist
-
-          # Copy skill-relevant files only
-          cp SKILL.md dist/
+          # Copy skill files from new structure
+          cp skills/context7/SKILL.md dist/
           cp LICENSE dist/
-
-          # Copy directories if they exist
-          [ -d "scripts" ] && cp -r scripts dist/
-
-          # Create archive
+          [ -d "skills/context7/references" ] && cp -r skills/context7/references dist/
+          [ -d "skills/context7/scripts" ] && cp -r skills/context7/scripts dist/
+          [ -d "skills/context7/assets" ] && cp -r skills/context7/assets dist/
+          [ -d "skills/context7/templates" ] && cp -r skills/context7/templates dist/
+          # Include plugin manifest
+          [ -d ".claude-plugin" ] && cp -r .claude-plugin dist/
           cd dist
-          zip -r ../context7-skill-${{ steps.version.outputs.version }}.zip .
-          tar -czvf ../context7-skill-${{ steps.version.outputs.version }}.tar.gz .
+          zip -r ../context7-${{ steps.version.outputs.version }}.zip .
+          tar -czvf ../context7-${{ steps.version.outputs.version }}.tar.gz .
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@c95fe1489396fe8a9eb87c0abf8aa5b2ef267fda # v2.2.1
         with:
           files: |
-            context7-skill-${{ steps.version.outputs.version }}.zip
-            context7-skill-${{ steps.version.outputs.version }}.tar.gz
+            context7-${{ steps.version.outputs.version }}.zip
+            context7-${{ steps.version.outputs.version }}.tar.gz
           generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
